--- a/labs/pyproject.toml
+++ b/labs/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 requires-python = ">=3.10"
 dependencies = [
     "datasets==2.14.6",
+    "matplotlib>=3.10.6",
     "notebook>=7.4.5",
 ]
