--- a/labs/pyproject.toml
+++ b/labs/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 requires-python = ">=3.10"
 dependencies = [
     "datasets==2.14.6",
+    "lxml>=6.0.1",
     "matplotlib>=3.10.6",
+    "nltk>=3.9.1",
     "notebook>=7.4.5",
+    "pydantic>=2.11.9",
+    "scikit-learn>=1.7.2",
 ]
